# sign-language-translator

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  roadmap.md
.github/: FUNDING.yml
.github/workflows/: check_releasable.yml  coverage.yaml  release.yml
docs/: conf.py  datasets.rst  index.rst  requirements.txt  sign_language_translator.rst
sign_language_translator/: __init__.py  cli.py
sign_language_translator/config/: __init__.py  assets.py  colors.py  enums.py  helpers.py  settings.py  urls.json  urls.yaml  utils.py
sign_language_translator/data_collection/: completeness.py  scraping.py  synonyms.py
sign_language_translator/languages/: __init__.py  sign_collection.py  utils.py  vocab.py
sign_language_translator/languages/sign/: __init__.py  mapping_rules.py  pakistan_sign_language.py  sign_language.py
sign_language_translator/languages/text/: __init__.py  english.py  hindi.py  text_language.py  urdu.py
sign_language_translator/models/: __init__.py  _utils.py  utils.py
sign_language_translator/models/language_models/: __init__.py  abstract_language_model.py  beam_sampling.py  mixer.py  ngram_language_model.py  simple_language_model.py  transformer_language_model.py
sign_language_translator/models/language_models/transformer_language_model/: __init__.py  layers.py  model.py  train.py
sign_language_translator/models/text_embedding/: __init__.py  text_embedding_model.py  vector_lookup_model.py
sign_language_translator/models/text_to_sign/: __init__.py  concatenative_synthesis.py  t2s_model.py
sign_language_translator/models/video_embedding/: __init__.py  mediapipe_landmarks_model.py  video_embedding_model.py
sign_language_translator/text/: __init__.py  metrics.py  preprocess.py  subtitles.py  synonyms.py  tagger.py  tokenizer.py  tokens.py  utils.py  vocab.py
sign_language_translator/utils/: __init__.py  archive.py  arrays.py  data_loader.py  download.py  landmarks_info.py  parallel.py  sign_data_attributes.py  tree.py  utils.py
sign_language_translator/vision/: __init__.py  _utils.py  concatenate.py  embed.py  transforms.py  utils.py  visualization.py
sign_language_translator/vision/landmarks/: __init__.py  connections.py  display.py  landmarks.py
sign_language_translator/vision/sign/: sign.py  transformations.py
sign_language_translator/vision/video/: __init__.py  display.py  video.py  video_iterators.py
tests/: test_cli.py  test_vision_utils.py
tests/test_config/: test_assets.py  test_settings.py  test_urls.py
tests/test_datasets/: test_json_data.py
tests/test_languages/: test_vocab.py
tests/test_languages/data/: language_to_token_to_id.json  organization_to_language_to_constructable_words.json  text-preprocessing.json  text_preprocessing.json  xy-dictionary-mapping.json
tests/test_languages/data/sign_recordings/: collection_to_label_to_language_to_words.json  recordings_labels.json
tests/test_languages/test_sign_language/: test_mapping_rules.py  test_pakistan_sign_language.py
tests/test_languages/test_text_language/: test_base_statics.py  test_english.py  test_hindi.py  test_urdu.py
tests/test_models/: test_get_model.py  test_model_utils.py
tests/test_models/test_language_models/: test_ngram_language_model.py  test_transformer_language_model.py
tests/test_models/test_text_embedding/: test_vector_lookup_model.py
tests/test_models/test_text_to_sign/: test_concatenative_synthesis.py
tests/test_models/test_video_embedding/: test_mediapipe.py  test_parallel_embedding.py
tests/test_text/: test_metrics.py  test_synonyms.py  test_tagger.py  test_text_utils.py  test_tokenizer.py  test_utils.py
tests/test_utils/: test_archive.py  test_arrays.py  test_download.py  test_parallel.py  test_utils.py
tests/test_vision/: test_transforms.py  test_video.py  test_vision_utils.py
tests/test_vision/test_landmarks/: test_landmark_transforms.py  test_landmarks.py  test_landmarks_display.py
tests/test_vision/test_video/: test_video.py
