[tool.poetry]
name = "sign_language_translator"
version = "0.7.3"
description = "Build Translators and Translate between text & sign language videos with AI."
authors = ["Mudassar Iqbal <mdsriqb@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "sign_language_translator" }]
repository = "https://github.com/sign-language-translator/sign-language-translator"
documentation = "https://sign-language-translator.readthedocs.io/en/latest/"
keywords = ["sign-language", "sign-language-translation", "nlp", "computer-vision", "deep-learning", "ai", "translation", "translator", "sign-language-translator", "rule-based"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.7.4"
numpy = "==1.24.*"
torch = "==2.1.*"
opencv-contrib-python = "^4.8.0.74"
tqdm = "^4.65.0"
click = "^8.1.4"
requests = "^2.31.0"
mediapipe = {version = "0.10.9", optional = true}
deep-translator = { version = "^1.11.4", optional = true }

[tool.poetry.extras]
mediapipe = ["mediapipe"]
synonyms = ["deep-translator"]
full = ["mediapipe", "deep-translator"]
all = ["mediapipe", "deep-translator"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv "
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.poetry.scripts]
slt = "sign_language_translator.cli:slt"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "except ImportError",
    "if mediapipe is None:"
]

[tool.coverage.run]
omit = ["temp/*", "temp_*.py", "temp_*/*"]
